--- a/src/pages/InitiativeTracker/initTracker.less
+++ b/src/pages/InitiativeTracker/initTracker.less
@@ -16,27 +16,47 @@
     .players_container {
         display: flex;
         flex-direction: column;
-        justify-content: space-around;
         align-items: center;
-        height: fit-content;
-        width: 100px;
         padding: 8px;
+        height: 200px;
+        overflow: auto;
 
-        .player_container {
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            align-items: center;
-            gap: 10px;
-        }
+        .players_container_list {
+            width: 200px;
 
-        .close_icon {
-            color: rgb(201, 0, 0);
-            cursor: pointer;
-
-            &:hover {
-                color: rgb(97, 0, 0);
+            
+            .player_container {
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                gap: 10px;
             }
+            
+            .close_icon {
+                color: rgb(201, 0, 0);
+                cursor: pointer;
+                
+                &:hover {
+                    color: rgb(97, 0, 0);
+                }
+            }
+        }
+    }
+
+    .calculate_list_container {
+        margin-top: 5px;
+        .calculate_list_header {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+        }
+        .calculate_list {
+            width: 200px;
+            height: 200px;
+            overflow: auto;
+            
         }
     }
 }
