--- a/src/pages/dmgTracker/dmgTracker.less
+++ b/src/pages/dmgTracker/dmgTracker.less
@@ -13,34 +13,51 @@
         gap: 8px;
     }
 
+    
     .monsters_container {
+        padding: 8px;
+        height: 200px;
+        width: 500px;
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding: 8px;
-        height: 200px;
+        justify-content: center;
         overflow: auto;
 
-        .monsters_container_list {
-            width: 200px;
+        .monster_container {
+            height: 40px;
+            width: 300px;
+            padding: 8px;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+            align-items: center;
+            gap: 10px;
+            border: 1px solid #774d00;
+            border-radius: 5px;
+        }
 
-            
-            .monster_container {
-                display: flex;
-                flex-direction: row;
-                justify-content: center;
-                align-items: center;
-                gap: 10px;
-            }
-            
-            .close_icon {
-                color: rgb(201, 0, 0);
-                cursor: pointer;
+        .remove_icon_container {
+            height: 100%;
+            display: flex;
+            justify-content: flex-end;
+            align-items: flex-start;
                 
+            .remove_icon {
+                color: #c90000;
+                cursor: pointer;
                 &:hover {
-                    color: rgb(97, 0, 0);
+                    color: #610000;
                 }
             }
         }
+                
+        .edit_icon {
+            color: #007a00;
+            cursor: pointer;
+            &:hover {
+                color: #005500;
+            }
+        }   
     }
 }
