--- a/src/pages/dmgTracker/dmgTracker.less
+++ b/src/pages/dmgTracker/dmgTracker.less
@@ -23,6 +23,7 @@
         align-items: center;
         justify-content: center;
         overflow: auto;
+        gap: 20px;
 
         .monster_container {
             height: 40px;
