--- a/src/pages/dmgTracker/dmgTracker.less
+++ b/src/pages/dmgTracker/dmgTracker.less
@@ -15,9 +15,8 @@
 
     
     .monsters_container {
-        padding: 8px;
-        height: 200px;
-        width: 500px;
+        padding: 8px 0;
+        width: inherit;
         display: flex;
         flex-direction: column;
         align-items: center;
